Ninja: fix jdk11 build